syntax = "proto3";

package v1;
option go_package = ".;llo";

import "plugin_codecs.proto";

// LLOReportTelemetry sent for each channel on every call to Report (once per
// round)
message LLOReportTelemetry {
  uint32 channel_id = 1;
  uint64 valid_after_nanoseconds = 2;
  uint64 observation_timestamp_nanoseconds = 3;
  uint32 report_format = 4;
  bool specimen = 5;
  repeated LLOStreamDefinition stream_definitions = 6;
  repeated LLOStreamValue stream_values = 7;
  bytes channel_opts = 8;
  uint64 seq_nr = 9;
  bytes config_digest = 10;
}
